--- a/src/Web/Pages/Customize/Index.cshtml
+++ b/src/Web/Pages/Customize/Index.cshtml
@@ -15,178 +15,188 @@
 }
 <img src="http://via.placeholder.com/1900x600" class="img-fluid" />
 
-<div class="dama-customize pt-sm-5 pt-2">
-    <div class="text-center">
-        <h2>Personaliza Tu mesmo!</h2>
-        <img class="separator image-invert" src="~/images/coração-rosa.png" />
-        <div class="mt-3">
-            <span class="badge badge-pill badge-light">1</span>
+<form method="post" enctype="multipart/form-data">
+    <div class="dama-customize pt-sm-5 pt-2">
+        <div class="text-center">
+            <h2>Personaliza Tu mesmo!</h2>
+            <img class="separator image-invert" src="~/images/coração-rosa.png" />
+            <div class="mt-3">
+                <span class="badge badge-pill badge-light">1</span>
+            </div>
+            <h4 class="mt-2">
+                CATEGORIA <br />
+                <span class="dama-customize-small">Escolhe uma opção</span>
+            </h4>
         </div>
-        <h4 class="mt-2">
-            CATEGORIA <br />
-            <span class="dama-customize-small">Escolhe uma opção</span>
-        </h4>
-    </div>
-    <div class="row">
-        <div class="offset-1 col-10">
-            <div class="row p-sm-3 dama-customize-cards ">
-                @foreach (var item in Model.CustomizeModel.Categories)
-                {
-                    <div class="col-sm-3 pt-3 category-block" cat-id="@item.Item1">
-                        <div class="card card-block justify-content-center align-items-center">
-                            <h5>@item.Item2</h5>
+        <div class="row">
+            <div class="offset-1 col-10">
+                <div class="row p-sm-3 dama-customize-cards ">
+                    @foreach (var item in Model.CustomizeModel.Categories)
+                    {
+                        <div class="col-sm-3 pt-3 category-block" cat-id="@item.Item1">
+                            <div class="card card-block justify-content-center align-items-center">
+                                <h5 class="@(item.Item1 == Model.CategoryId ? "font-weight-bold" : "")">@item.Item2</h5>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+        <div class="text-center">
+            <div class="mt-3">
+                <span class="badge badge-pill badge-light">2</span>
+            </div>
+            <h4 class="mt-2">
+                Produto <br />
+                <span class="dama-customize-small">Escolhe uma opção</span>
+            </h4>
+        </div>
+        <div class="row">
+            <div class="offset-1 col-10">
+                <div class="row p-sm-3 dama-customize-cards slider-for">
+                    @for (int i = 0; i < Model.CustomizeModel.CatalogItems.Count; i++)
+                    {
+                        <div class="col-sm-3 pt-3 product-block" catalog-id="@Model.CustomizeModel.CatalogItems[i].CatalogItemId">
+                            <div class="card card-block justify-content-center align-items-center" style="min-width:9rem">
+                                <img class="card-img-top" src="@Model.CustomizeModel.CatalogItems[i].PictureUri" alt="@Model.CustomizeModel.CatalogItems[i].CatalogItemName">
+                                <p class="card-text small">@Model.CustomizeModel.CatalogItems[i].CatalogItemName</p>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+        <div class="text-center">
+            <div class="mt-3">
+                <span class="badge badge-pill badge-light">3</span>
+            </div>
+            <h4 class="mt-2">
+                PERSONALIZAR <br />
+                <span class="dama-customize-small">Preenche os campos em baixo e escolhe duas cores!</span>
+            </h4>
+        </div>
+        <div class="row ml-1 mr-1">
+            <div class="offset-sm-1 col-sm-7 col-12 dama-customize-gray p-3">
+                <strong>Descreve a ilustração...</strong><br />
+                <textarea asp-for="CustomizeModel.Description" rows="5" class="w-100 dama-customize-textarea"></textarea>
+            </div>
+            <div class="col-sm-3 col-12 pt-sm-5 pt-2">
+                <strong>Exemplo:</strong>
+                <p class="dama-customize-small2">
+                    "A minha amiga adora cozinhar, tem cabelo curto e não dispensa a companhia do seu gato cizento.<br />
+                    Adora cor de rosa e castanho."
+                </p>
+            </div>
+        </div>
+
+        <div class="custom-file mt-sm-4 mt-2 offset-sm-5 col-sm-3 offset-1 col-10">
+            <input type="file" asp-for="CustomizeModel.UploadFile" class="custom-file-input" id="validatedCustomFile" />
+            <label class="custom-file-label" for="validatedCustomFile">Anexar um ficheiro</label>
+        </div>
+        <div class="row ml-1 mr-1 mt-sm-4 mt-2">
+            <div class="offset-sm-1 col-sm-7 col-12 dama-customize-gray p-3">
+                <strong>Queres adicionar uma frase ou nome?</strong><br />
+                <textarea asp-for="CustomizeModel.Text" rows="2" class="w-100 dama-customize-textarea"></textarea>
+            </div>
+        </div>
+        <div class="row ml-1 mr-1 mt-sm-4 mt-2 text-center">
+            <div class="offset-sm-1 col-sm-7 col-12 p-0">
+                <strong>Escolha uma ou duas cores</strong>
+                <div class="row p-1 m-0 dama-customize-colors">
+                    <div class="card" style="width: 5rem;background-color:#000000">
+                        <div class="card-body">
                         </div>
                     </div>
-                }
-            </div>
-        </div>
-    </div>
-    <div class="text-center">
-        <div class="mt-3">
-            <span class="badge badge-pill badge-light">2</span>
-        </div>
-        <h4 class="mt-2">
-            Produto <br />
-            <span class="dama-customize-small">Escolhe uma opção</span>
-        </h4>
-    </div>
-    <div class="row">
-        <div class="offset-1 col-10">
-            <div class="row p-sm-3 dama-customize-cards slider-for">
-                <div class="col-sm-3 pt-3">
-                    <div class="card card-block justify-content-center align-items-center">
-                        <img class="card-img-top" src="http://via.placeholder.com/200X200" alt="Produto">
+                    <div class="card" style="width: 5rem;background-color:#808080">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-3 pt-3">
-                    <div class="card card-block justify-content-center align-items-center">
-                        <img class="card-img-top" src="http://via.placeholder.com/200X200" alt="Produto">
+                    <div class="card" style="width: 5rem;background-color:#ffffff">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-3 pt-3">
-                    <div class="card card-block justify-content-center align-items-center">
-                        <img class="card-img-top" src="http://via.placeholder.com/200X200" alt="Produto">
+                    <div class="card" style="width: 5rem;background-color:#ff6a00">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-3 pt-3">
-                    <div class="card card-block justify-content-center align-items-center">
-                        <img class="card-img-top" src="http://via.placeholder.com/200X200" alt="Produto">
+                    <div class="card" style="width: 5rem;background-color:#ffd800">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-3 pt-3">
-                    <div class="card card-block justify-content-center align-items-center">
-                        <img class="card-img-top" src="http://via.placeholder.com/200X200" alt="Produto">
+                    <div class="card" style="width: 5rem;background-color:#b6ff00">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="text-center">
-        <div class="mt-3">
-            <span class="badge badge-pill badge-light">3</span>
-        </div>
-        <h4 class="mt-2">
-            PERSONALIZAR <br />
-            <span class="dama-customize-small">Preenche os campos em baixo e escolhe duas cores!</span>
-        </h4>
-    </div>
-    <div class="row ml-1 mr-1">
-        <div class="offset-sm-1 col-sm-7 col-12 dama-customize-gray p-3">
-            <strong>Descreve a ilustração...</strong><br />
-            <textarea rows="5" class="w-100 dama-customize-textarea"></textarea>
-        </div>
-        <div class="col-sm-3 col-12 pt-sm-5 pt-2">
-            <strong>Exemplo:</strong>
-            <p class="dama-customize-small2">
-                "A minha amiga adora cozinhar, tem cabelo curto e não dispensa a companhia do seu gato cizento.<br />
-                Adora cor de rosa e castanho."
-            </p>
-        </div>
-    </div>
-
-    <div class="custom-file mt-sm-4 mt-2 offset-sm-5 col-sm-3 offset-1 col-10">
-        <input type="file" class="custom-file-input" id="validatedCustomFile" required>
-        <label class="custom-file-label" for="validatedCustomFile">Anexar um ficheiro</label>
-    </div>
-    <div class="row ml-1 mr-1 mt-sm-4 mt-2">
-        <div class="offset-sm-1 col-sm-7 col-12 dama-customize-gray p-3">
-            <strong>Queres adicionar uma frase ou nome?</strong><br />
-            <textarea rows="2" class="w-100 dama-customize-textarea"></textarea>
-        </div>
-    </div>
-    <div class="row ml-1 mr-1 mt-sm-4 mt-2 text-center">
-        <div class="offset-sm-1 col-sm-7 col-12 p-0">
-            <strong>Escolha uma ou duas cores</strong>
-            <div class="row p-1 m-0 dama-customize-colors">
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#000000">
+                    <div class="card" style="width: 5rem;background-color:#0026ff">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#808080">
+                    <div class="w-100 d-none d-sm-block"></div>
+                    <div class="card" style="width: 5rem;background-color:#b200ff">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#ffffff">
+                    <div class="card" style="width: 5rem;background-color:#ff00dc">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#ff6a00">
+                    <div class="card" style="width: 5rem;background-color:#15e9ef">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#ffd800">
+                    <div class="card" style="width: 5rem;background-color:#fbcd17">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#b6ff00">
+                    <div class="card" style="width: 5rem;background-color:#0befe1">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#0026ff">
+                    <div class="card" style="width: 5rem;background-color:#c2ed10">
+                        <div class="card-body">
+                        </div>
                     </div>
-                </div>
-                <div class="w-100 d-none d-sm-block"></div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#b200ff">
-                    </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#ff00dc">
-                    </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#15e9ef">
-                    </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#fbcd17">
-                    </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#0befe1">
-                    </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#c2ed10">
-                    </div>
-                </div>
-                <div class="card" style="width: 5rem;">
-                    <div class="card-body" style="background-color:#ee1988">
+                    <div class="card" style="width: 5rem;background-color:#ee1988">
+                        <div class="card-body">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row mt-3 pb-5">
-        <div class="offset-sm-5 col-sm-3 col-12 text-sm-right text-center">
-            <button type="submit" class="esh-catalog-button btn btn-default btn-brand btn-brand-big mt-0">&nbsp;SUBMETER&nbsp;</button>
+        <div class="row mt-3 pb-5">
+            <div class="offset-1 col-sm-4 col-10">
+                <div class="form-group required">
+                    <label asp-for="CustomizeModel.BuyerName" class="control-label form-label"></label>
+                    <input asp-for="CustomizeModel.BuyerName" class="form-control form-input form-input-center" />
+                    <span asp-validation-for="CustomizeModel.BuyerName" class="text-danger"></span>
+                </div>
+                <div class="form-group required">
+                    <label asp-for="CustomizeModel.BuyerEmail" class="control-label form-label"></label>
+                    <input asp-for="CustomizeModel.BuyerEmail" class="form-control form-input form-input-center" />
+                    <span asp-validation-for="CustomizeModel.BuyerEmail" class="text-danger"></span>
+                </div>
+                <div class="form-group required">
+                    <label asp-for="CustomizeModel.BuyerPhone" class="control-label form-label"></label>
+                    <input asp-for="CustomizeModel.BuyerPhone" class="form-control form-input form-input-center" />
+                    <span asp-validation-for="CustomizeModel.BuyerPhone" class="text-danger"></span>
+                </div>
+                <button type="submit" class="esh-catalog-button btn btn-default btn-brand mt-0">&nbsp;SUBMETER&nbsp;</button>
+            </div>
         </div>
+        @*<div class="row mt-3 pb-5">
+                <div class="offset-sm-5 col-sm-3 col-12 text-sm-right text-center">
+                    <button type="submit" class="esh-catalog-button btn btn-default btn-brand btn-brand-big mt-0">&nbsp;SUBMETER&nbsp;</button>
+                </div>
+            </div>*@
     </div>
-</div>
+    <input type="hidden" asp-for="CustomizeModel.ProductSelected" />
+    <input type="hidden" asp-for="CustomizeModel.Colors" />
+</form>
 
 @section Scripts {
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
     <script>
+        var colors = [];
         $(document).ready(function () {
             $('.slider-for').slick({
                 infinite: true,
@@ -206,6 +216,27 @@
                 var url = '@(Url.Page("/Customize/Index", new { CategoryId = 0 }))';
                 url = url.replace('0', $(this).attr('cat-id'));
                 window.location.replace(url);
+            });
+
+            $('.product-block').click(function () {
+                $(this).find('img').css('opacity', 1);
+                $(this).find('.card-text').css('font-weight', 'bold');
+                $(this).siblings().find('img').css('opacity', 0.5);
+                $(this).siblings().find('.card-text').css('font-weight', '100');
+                $('#CustomizeModel_ProductSelected').val($(this).attr('catalog-id'));
+            });
+
+            $('.dama-customize-colors .card').click(function () {
+                $(this).toggleClass('dama-customize-color-selected');
+                var color = $(this).css('background-color').replace(/,/g, ';');
+                if ($(this).hasClass('dama-customize-color-selected'))
+                    colors.push(color);
+                else {
+                    var index = colors.indexOf(color);
+                    colors.splice(index, 1);
+                }
+                console.log(colors);
+                $('#CustomizeModel_Colors').val(colors);
             });
         });
     </script>
