--- a/src/Backoffice/Pages/Orders/Index.cshtml
+++ b/src/Backoffice/Pages/Orders/Index.cshtml
@@ -3,7 +3,14 @@
 @{
     ViewData["Title"] = "Encomendas";
 }
-<h2>Encomendas</h2>
+<div class="row">
+    <div class="col-xs-6">
+        <h2>Encomendas</h2>
+    </div>
+    <div class="col-xs-6 text-right" style="margin-top:20px;">
+        <a class="btn btn-primary" asp-page="./CustomizeOrders">Ver encomendas personalizadas</a>
+    </div>
+</div>
 <table class="table table-pagination">
     <thead>
         <tr>
