--- a/src/Web/Pages/Customize/Index.cshtml
+++ b/src/Web/Pages/Customize/Index.cshtml
@@ -56,7 +56,7 @@
                 <div class="row p-sm-3 dama-customize-cards slider-for">
                     @for (int i = 0; i < Model.CustomizeModel.CatalogItems.Count; i++)
                     {
-                        <div class="col-sm-3 pt-3 product-block" catalog-id="@Model.CustomizeModel.CatalogItems[i].CatalogItemId">
+                        <div class="col pt-3 product-block" catalog-id="@Model.CustomizeModel.CatalogItems[i].CatalogItemId">
                             <div class="card card-block justify-content-center align-items-center" style="min-width:9rem">
                                 <img class="card-img-top" src="@Model.CustomizeModel.CatalogItems[i].PictureUri" alt="@Model.CustomizeModel.CatalogItems[i].CatalogItemName">
                                 <p class="card-text small">@Model.CustomizeModel.CatalogItems[i].CatalogItemName</p>
@@ -79,6 +79,7 @@
             <div class="offset-sm-1 col-sm-7 col-12 dama-customize-gray p-3">
                 <strong>Descreve a ilustração...</strong><br />
                 <textarea asp-for="CustomizeModel.Description" rows="5" class="w-100 dama-customize-textarea"></textarea>
+                <span asp-validation-for="CustomizeModel.Description" class="text-danger"></span>
             </div>
             <div class="col-sm-3 col-12 pt-sm-5 pt-2">
                 <strong>Exemplo:</strong>
@@ -219,10 +220,11 @@
             });
 
             $('.product-block').click(function () {
-                $(this).find('img').css('opacity', 1);
-                $(this).find('.card-text').css('font-weight', 'bold');
-                $(this).siblings().find('img').css('opacity', 0.5);
-                $(this).siblings().find('.card-text').css('font-weight', '100');
+                //$(this).find('img').css('opacity', 1);
+                //$(this).find('.card-text').css('font-weight', 'bold');
+                //$(this).siblings().find('img').css('opacity', 0.5);
+                //$(this).siblings().find('.card-text').css('font-weight', '100');
+                selectProduct($(this));
                 $('#CustomizeModel_ProductSelected').val($(this).attr('catalog-id'));
             });
 
@@ -238,6 +240,35 @@
                 console.log(colors);
                 $('#CustomizeModel_Colors').val(colors);
             });
+
+            $('#validatedCustomFile').on('change', function () {
+                changeLabelText();
+            });
+
+            function selectProduct(elem) {
+                elem.find('img').css('opacity', 1);
+                elem.find('.card-text').css('font-weight', 'bold');
+                elem.siblings().find('img').css('opacity', 0.5);
+                elem.siblings().find('.card-text').css('font-weight', '100');
+            }
+
+            function changeLabelText() {
+                var profilePicValue = document.getElementById('validatedCustomFile').value; /* gets the filepath and filename from the input */
+                var fileNameStart = profilePicValue.lastIndexOf('\\'); /* finds the end of the filepath */
+                profilePicValue = profilePicValue.substr(fileNameStart + 1); /* isolates the filename */
+                var profilePicLabelText = document.querySelector('label[for="validatedCustomFile"]'); /* finds the label text */
+                if (profilePicValue !== '') {
+                    profilePicLabelText.textContent = profilePicValue.substring(0,15); /* changes the label text */
+                }
+            }
+
+            @if(Model.CustomizeModel.ProductSelected.HasValue)
+            {
+                <text>
+            var productElem = $('.slider-for').find("[catalog-id='@Model.CustomizeModel.ProductSelected.Value']");
+            selectProduct(productElem);
+                </text>
+            }
         });
     </script>
 }
