add customize link to product detail page

--- a/src/Backoffice/Pages/Products/Delete.cshtml
+++ b/src/Backoffice/Pages/Products/Delete.cshtml
@@ -67,6 +67,12 @@
             @Html.DisplayFor(model => model.ProductModel.IsFeatured)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.ProductModel.CanCustomize)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ProductModel.CanCustomize)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.ProductModel.PictureUri)
         </dt>
         <dd>
