correct cinzento name

--- a/src/Web/Pages/Customize/Index.cshtml
+++ b/src/Web/Pages/Customize/Index.cshtml
@@ -83,7 +83,7 @@
             <div class="col-sm-3 col-12 pt-sm-5 pt-2">
                 <strong>Exemplo:</strong>
                 <p class="dama-customize-small2">
-                    "A minha amiga adora cozinhar, tem cabelo curto e não dispensa a companhia do seu gato cizento.<br />
+                    "A minha amiga adora cozinhar, tem cabelo curto e não dispensa a companhia do seu gato cinzento.<br />
                     Adora cor de rosa e castanho."
                 </p>
             </div>
@@ -180,7 +180,9 @@
                     <input asp-for="CustomizeModel.BuyerPhone" class="form-control form-input form-input-center" />
                     <span asp-validation-for="CustomizeModel.BuyerPhone" class="text-danger"></span>
                 </div>
-                <button type="submit" class="esh-catalog-button btn btn-default btn-brand mt-0">&nbsp;SUBMETER&nbsp;</button>
+                <div class="text-center">
+                    <button type="submit" class="esh-catalog-button btn btn-default btn-brand mt-0">&nbsp;SUBMETER&nbsp;</button>
+                </div>
             </div>
         </div>
         @*<div class="row mt-3 pb-5">
