--- a/src/Web/Pages/_Layout.cshtml
+++ b/src/Web/Pages/_Layout.cshtml
@@ -34,7 +34,7 @@
             <img src="~/images/brand_full.png" width="150" alt="Dama no Jornal" />
         </a>
         <form class="form-inline my-2 my-lg-0 search-text" asp-page="/Search/Index" method="get">
-            <input name="q" class="bg-transparent border-left-0 border-right-0 border-top-0 border-light" autocomplete="off" type="search" placeholder="Procurar" aria-label="Search">
+            <input id="search" name="q" class="bg-transparent border-left-0 border-right-0 border-top-0 border-light" autocomplete="off" type="search" placeholder="Procurar" aria-label="Search">
         </form>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar7">
             <span class="navbar-toggler-icon"></span>
