--- a/src/Web/Pages/Basket/Checkout.cshtml
+++ b/src/Web/Pages/Basket/Checkout.cshtml
@@ -73,7 +73,7 @@
 
                 </div>
                 <div id="store-location-col" class="col-sm-6 dama-checkout-text mt-2 mt-sm-0 @(Model.UserAddress.UseUserAddress == 2 ? "d-block" : "d-none")">
-                    <h4>Morada de Envio</h4>
+                    <h4>Morada de Entrega</h4>
                     <div class="form-group">
                         <label asp-for="UserAddress.Name"></label>
                         <input asp-for="UserAddress.Name" class="form-control">
@@ -221,8 +221,8 @@
                 if (this.value == '1') {
                     $('#shipping-cost').removeClass('d-none').addClass('d-flex');
                     $('#basket-total').text(toNumber(@Model.BasketModel.Total().ToString().Replace(',','.')));
-                    $('#user-address-col').addClass('dama-checkout-border d-none').addClass('d-block');
-                    $('#store-location-col').removeClass('dama-checkout-border d-block').addClass('d-none');
+                    $('#user-address-col').addClass('d-none').addClass('d-block');
+                    $('#store-location-col').removeClass('d-block').addClass('d-none');
                     $('#billing-address-col').removeClass('d-none').addClass('d-block');
                     $('#grpSameAsShipping').removeClass('d-none').addClass('d-block');
                     //$('#invoice-address-controls').removeClass('d-none').addClass('d-block');
@@ -234,8 +234,8 @@
 
                     $('#shipping-cost').removeClass('d-flex').addClass('d-none');
                     $('#basket-total').text(toNumber(@Model.BasketModel.SubTotal().ToString().Replace(',', '.')));
-                    $('#user-address-col').removeClass('dama-checkout-border d-block').addClass('d-none');
-                    $('#store-location-col').addClass('dama-checkout-border d-none').addClass('d-block');
+                    $('#user-address-col').removeClass('d-block').addClass('d-none');
+                    $('#store-location-col').addClass('d-none').addClass('d-block');
                     $('#billing-address-col').removeClass('d-none').addClass('d-block');
                     $('#grpSameAsShipping').removeClass('d-block').addClass('d-none');
                     //$('#invoice-address-controls').removeClass('d-block').addClass('d-none');
