--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -93,6 +93,11 @@ body {
     text-align: center;
 }
 
+#search:focus {
+    border-color: #fff;
+    box-shadow: inset 0 1px 1px #fff, 0 0 8px #fff;
+}
+
 .alert {
     padding-left: 0;
 }
