--- a/src/Web/Pages/Account/Manage/_Layout.cshtml
+++ b/src/Web/Pages/Account/Manage/_Layout.cshtml
@@ -2,7 +2,7 @@
     Layout = "/Pages/_Layout.cshtml";
 }
 
-<h2>A minha conta</h2>
+<h2 class="dama-heading-normal-font">A minha conta</h2>
 
 <div>
     <h4>Mude as definições da sua conta</h4>
