--- a/src/Web/Pages/Account/Signin.cshtml
+++ b/src/Web/Pages/Account/Signin.cshtml
@@ -9,7 +9,7 @@
 <div class="account-login-container">
     <div class="row">
         <div class="col-sm-6">
-            <h2>Login</h2>
+            <h2 class="dama-heading-normal-font">Login</h2>
             <section>
                 <form asp-route-returnurl="@ViewData["ReturnUrl"]" asp-page-handler="SignIn" method="post" class="form-horizontal">
                     <h4>Já se registou?</h4>
@@ -44,7 +44,7 @@
             </section>
         </div>
         <div class="col-sm-6">
-            <h2>Registo</h2>
+            <h2 class="dama-heading-normal-font">Registo</h2>
             <section>
                 <h4>Registe-se!</h4>
                 <form asp-route-returnurl="@ViewData["ReturnUrl"]" asp-page-handler="Register" method="post" class="form-horizontal">
