--- a/src/Web/Pages/Basket/Checkout.cshtml
+++ b/src/Web/Pages/Basket/Checkout.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Encomendar";
 }
 
-<h2>Encomendar</h2>
+<h2 class="dama-heading-normal-font">Encomendar</h2>
 
 <form method="post">
     <input type="hidden" asp-for="BasketModel.Id" />
