--- a/src/Web/Pages/Basket/Index.cshtml
+++ b/src/Web/Pages/Basket/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Basket";
 }
-<h2>Carrinho</h2>
+<h2 class="dama-heading-normal-font">Carrinho</h2>
 @*<div class="container">*@
 
 @if (Model.BasketModel.Items.Any())
