--- a/src/Web/Pages/Basket/Result.cshtml
+++ b/src/Web/Pages/Basket/Result.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Resultado";
 }
-<h2>Obrigada!</h2>
+<h2 class="dama-heading-normal-font">Obrigada!</h2>
 
 <div class="row">
     <div class="col-sm-6">
