--- a/src/Web/Pages/Order/Index.cshtml
+++ b/src/Web/Pages/Order/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="esh-orders">
     <div class="container">
-        <h2>@ViewData["Title"]</h2>
+        <h2 class="dama-heading-normal-font">@ViewData["Title"]</h2>
         <div class="text-center">
             <img class="separator" src="~/images/coração-rosa.png" />
         </div>
