--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -135,6 +135,10 @@ h2 {
     line-height: 1.4em
 }
 
+.dama-heading-normal-font {
+    font-family: Quicksand, sans-serif;
+}
+
 h4 {
     font-size: 20px;
 }
@@ -497,4 +501,8 @@ h4 {
 .image-invert {
     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
     filter: grayscale(100%)brightness(200%);
+}
+
+.nav-pills .nav-link.active {
+    background-color: #5fcbcb;
 }
