--- a/src/Web/Pages/_Layout.cshtml
+++ b/src/Web/Pages/_Layout.cshtml
@@ -47,7 +47,7 @@
     </nav>
 
     <nav class="navbar navbar-dark navbar-expand-md justify-content-between background_gradient pb-md-4 d-none d-sm-flex">
-        <a href="/" class="pl-3 pl-lg-5 backToHome"><i class="fas fa-arrow-left"></i><span>Votar ao inicio</span></a>
+        <a href="/" class="pl-3 pl-lg-5 backToHome"><i class="fas fa-arrow-left"></i><span>Voltar ao início</span></a>
         <div class="d-flex d-sm-none dama-login-mobile pl-5">
             @await Html.PartialAsync("_LoginPartial")
         </div>
