--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -17,14 +17,19 @@
 }
 
 @font-face {
-    font-family: Quicksand Bold;
+    font-family: Quicksand Regular;
     src: url("../fonts/Quicksand-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: Quicksand Medium;
+    src: url("../fonts/Quicksand-Medium.ttf") format("truetype");
 }
 
 
 html,
 body {
-    font-family: Quicksand, sans-serif;
+    font-family: 'Quicksand Medium', sans-serif;
     font-size: 18px;
     font-weight: 400;
     z-index: 10;
@@ -136,7 +141,7 @@ h2 {
 }
 
 .dama-heading-normal-font {
-    font-family: Quicksand, sans-serif;
+    font-family: "Quicksand Medium", sans-serif;
 }
 
 h4 {
@@ -184,15 +189,21 @@ h4 {
 .backToHome span {
     opacity: .9;
     padding-left: 10px;
-    font: 400 14px Quicksand;
     color: #fff;
+    font-size: 13px;
+    font-weight: 400;    
 }
 .backToHome,
 .backToHome:active,
-.backToHome:visited,
+.backToHome:visited {
+    color: #fff;
+    text-decoration: none;
+    transition: all .2s ease-in-out;
+}
 .backToHome:hover {
     color: #fff;
     text-decoration: none;
+    transform: scale(1.1);
 }
 
 @media screen and (max-width: 992px) {
@@ -233,17 +244,18 @@ h4 {
     left: 50%;
     transform: translateX(-50%);
 }
- 
-.navbar-dark .navbar-nav .nav-item a:hover {
-    /*border-bottom: 3px solid #fff;*/
-    color: #fff;   
+
+.navbar-dark .navbar-nav .nav-link:hover {
+    border-bottom: 3px solid #fff;
+    color: #fff;
 }
 
 .navbar-dark .navbar-nav .nav-link {
     color: #fff;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 14px;
     text-decoration: none;
+    transition: border 1s linear;
 }
 
 .navbar-dark .list-inline .nav-item .nav-link {
