--- a/src/Dama.IdentityServer/Views/Account/LoginApp.cshtml
+++ b/src/Dama.IdentityServer/Views/Account/LoginApp.cshtml
@@ -19,20 +19,23 @@
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <input type="hidden" name="returnurl" value="@ViewData["ReturnUrl"]" />
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 text-center">
                         <button type="submit" formaction="SueLogin">
                             <img src="~/images/img-sue.png" class="img-responsive" />
                         </button>
+                        <h3>Susana</h3>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 text-center">
                         <button type="submit" formaction="SoniaLogin">
                             <img src="~/images/img-sonia.png" class="img-responsive" />
                         </button>
+                        <h3>Sônia</h3>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 text-center">
                         <button type="submit" formaction="JueLogin">
-                            <img src="~/images/img-joao.png" class="img-responsive"  />
+                            <img src="~/images/img-joao.png" class="img-responsive" />
                         </button>
+                        <h3>João</h3>
                     </div>
                 </div>
             </form>
